# otm-workbench

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
tests/: __init__.py  conftest.py  fixtures_rates.py  test_assets_library_assets.py  test_assets_library_foundation.py  test_assets_library_links.py  test_assets_library_permissions.py  test_assets_library_versions.py  test_assistant_source_index.py  test_auth_permissions.py  test_catalog_core.py  test_catalog_schema_packs.py  test_cli.py  test_coordinate_quality_api.py  test_coordinate_quality_engine.py  test_database.py  test_dev_tools_summary.py  test_error_contracts.py  test_evidence_hub_index.py  test_gui_shell_backend_contracts.py  test_health.py  test_integration_mapping_artifacts.py  test_integration_mapping_audit_events.py  test_integration_mapping_definitions.py  test_integration_mapping_enrichment.py  test_integration_mapping_foundation.py  test_integration_mapping_join_bindings.py  test_integration_mapping_joins.py  test_integration_mapping_lookups.py  test_integration_mapping_loops.py  test_integration_mapping_mappings.py  test_integration_mapping_payload_artifacts.py  test_integration_mapping_preview.py  test_integration_mapping_response_handlers.py  test_integration_mapping_schema_persistence.py  test_integration_mapping_schema_tree.py  test_integration_mapping_spec_generator.py  (+41 more)
(+740 files in other folders)
